--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <div class="text-center">
-        <h1 class="mb-4">Will you be my Valentine, Zy?</h1>
+        <h1 class="mb-4">Will you be my Valentine, Zy? 😁</h1>
         <button id="yes-btn" class="btn btn-success btn-lg mx-2">Yes</button>
         <button id="no-btn" class="btn btn-danger btn-lg mx-2">No</button>
         <div id="message" class="mt-4">
